--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -10,35 +10,44 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>Theme Template for Bootstrap</title>
+
+    <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/css/theme.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+
+    <script src="../vendor/jquery/jquery.js"></script>
+    <script src="../vendor/jquery/jquery-ui.js"></script>
+    <link href="../vendor/jquery/jquery-ui.css" rel="stylesheet">
+
     <script src="../vendor/angular/angular.js"></script>
     <script src="../vendor/angular/angular-route.js"></script>
+    <script src="directives/widget-list-sort.js"></script>
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
+
     <script src="views/home/controllers/home.controller.client.js"></script>
+
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
     <script src="views/user/controllers/register.controller.client.js"></script>
+
     <script src="views/website/controllers/website-list.controller.client.js"></script>
     <script src="views/website/controllers/website-new.controller.client.js"></script>
     <script src="views/website/controllers/website-edit.controller.client.js"></script>
+
     <script src="views/page/controllers/page-list.controller.client.js"></script>
     <script src="views/page/controllers/page-new.controller.client.js"></script>
     <script src="views/page/controllers/page-edit.controller.client.js"></script>
+
     <script src="views/widget/controllers/widget-list.controller.client.js"></script>
+    <script src="directives/controllers/widget-list-sort.controller.client.js"></script>
     <script src="views/widget/controllers/widget-edit.controller.client.js"></script>
     <script src="views/widget/controllers/widget-new.controller.client.js"></script>
+
     <script src="services/user.service.client.js"></script>
     <script src="services/website.service.client.js"></script>
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="../vendor/css/theme.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-
 </head>
 
 <body>
