--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -39,6 +39,7 @@
     <script src="views/page/controllers/page-new.controller.client.js"></script>
     <script src="views/page/controllers/page-edit.controller.client.js"></script>
 
+    <script src="views/widget/controllers/widget-search.controller.client.js"></script>
     <script src="views/widget/controllers/widget-list.controller.client.js"></script>
     <script src="directives/controllers/widget-list-sort.controller.client.js"></script>
     <script src="views/widget/controllers/widget-edit.controller.client.js"></script>
@@ -48,6 +49,7 @@
     <script src="services/website.service.client.js"></script>
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
+    <script src="services/flickr.service.client.js"></script>
 </head>
 
 <body>
