--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,14 @@
 
     <title>Theme Template for Bootstrap</title>
 
-    <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="vendor/css/theme.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-
     <script src="vendor/jquery/jquery.js"></script>
     <script src="vendor/jquery/jquery-ui.js"></script>
     <link href="vendor/jquery/jquery-ui.css" rel="stylesheet">
+
+    <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/css/theme.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -51,6 +52,7 @@
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
     <script src="services/flickr.service.client.js"></script>
+    <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
